[tool.poetry]
name = "berri_ai"
version = "0.14.1"
description = ""
authors = ["Team Berri <clerkieai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pipreqs = "^0.4.11"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
